--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /UsingALocalRelationalDatabase-SQLite/headers.py
 /UsingALocalRelationalDatabase-SQLite/__pycache__
+/UsingALocalRelationalDatabase-SQLite/credentials.py
