--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /UsingALocalRelationalDatabase-SQLite/headers.py
 /UsingALocalRelationalDatabase-SQLite/__pycache__
 /UsingALocalRelationalDatabase-SQLite/credentials.py
+/Using a Rational Database - Postgresql and psychopg2/credentials.py
