--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /UsingALocalRelationalDatabase-SQLite/headers.py
 /UsingALocalRelationalDatabase-SQLite/__pycache__
 /UsingALocalRelationalDatabase-SQLite/credentials.py
-/Using a Rational Database - Postgresql and psychopg2/credentials.py
+/Using a Rational Database - Postgesql and psycopg2/credentials.py
+/Using a Rational Database - Postgesql and psycopg2/__pycache__
