--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /UsingALocalRelationalDatabase-SQLite/headers.py
 /UsingALocalRelationalDatabase-SQLite/__pycache__
 /UsingALocalRelationalDatabase-SQLite/credentials.py
-/Using a Rational Database - Postgesql and psycopg2/credentials.py
-/Using a Rational Database - Postgesql and psycopg2/__pycache__
+/UsingaRelationalDatabase-Postgesql/credentials.py
+/UsingaRelationalDatabase-Postgesql/__pycache__
